[package]
name = "me"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.17"

[dependencies.leptos]
version = "0.6.9"
default-features = false
features = ["csr", "serde", "nightly"] 
